<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wines of the World</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search">Search</string>
    <string name="title_name">Name</string>
    <string name="title_grape">Grape</string>
    <string name="title_vintage">Vintage</string>
    <string name="title_price">Price</string>
    <string name="title_region">Region</string>
    <string name="title_country">Country</string>
    <string name="title_notes">Tasting Notes</string>
    <string name="title_activity_country_search">CountrySearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_grape_search">GrapeSearch</string>
    <string name="title_activity_vintage_search">VintageSearch</string>
    <string name="title_activity_price_search">PriceSearch</string>
    <string name="title_activity_region_search">RegionSearch</string>
    <string name="title_activity_notes_search">NotesSearch</string>
    <string name="countryOfOrigin">Country of Origin</string>

    <string-array name="white_grape_array">
        <item>Chardonnay</item>
        <item>Gewurztraminer</item>
        <item>Muscat</item>
        <item>Pinot Blanc</item>
        <item>Pinot Grigio</item>
        <item>Pinot Gris</item>
        <item>Riesling</item>
        <item>Sauvignon</item>
        <item>Semillon</item>
    </string-array>
    <string-array name="red_grape_array">
        <item>Cabernet Sauvignon</item>
        <item>Cabernet Franc</item>
        <item>Malbec</item>
        <item>Merlot</item>
        <item>Pinot Noir</item>
        <item>Sangiovese</item>
        <item>Shiraz</item>
        <item>Zinfadel</item>
    </string-array>
    <string-array name="grape_types">
        <item>Any</item>
        <item>Red</item>
        <item>White</item>
        <item>Rose</item>
        <item>Fortified</item>
    </string-array>
    <string-array name="grape_types_no_any">
        <item>Red</item>
        <item>White</item>
        <item>Rose</item>
        <item>Fortified</item>
    </string-array>
    <string-array name="any_grape">
        <item>Any</item>
    </string-array>

    <string name="title_activity_explore">Explore</string>

</resources>
