<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.martinez.winesoftheworld.Search$PlaceholderFragment">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:rowCount="14"
        android:layout_marginTop="75dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_name"
            android:id="@+id/button"
            android:layout_row="0"
            android:layout_column="0"
            android:onClick="startNameSearch" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_country"
            android:id="@+id/button2"
            android:layout_row="1"
            android:layout_column="0"
            android:onClick="startCountrySearch" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_grape"
            android:id="@+id/button3"
            android:layout_row="2"
            android:layout_column="0"
            android:onClick="startGrapeSearch" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_region"
            android:id="@+id/button4"
            android:layout_row="4"
            android:layout_column="0"
            android:onClick="startRegionSearch" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_vintage"
            android:id="@+id/button5"
            android:layout_row="5"
            android:layout_column="0"
            android:onClick="startVintageSearch" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_price"
            android:id="@+id/button6"
            android:layout_row="7"
            android:layout_column="0"
            android:onClick="startPriceSearch" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_notes"
            android:id="@+id/button7"
            android:layout_row="8"
            android:layout_column="0"
            android:onClick="startNotesSearch" />
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Select a category in which to find a wine!"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp" />

</RelativeLayout>
